[gd_scene load_steps=22 format=3 uid="uid://cju6hrw6xsta7"]

[ext_resource type="Script" path="res://levels/test stages/test_stage.gd" id="1_vfap4"]
[ext_resource type="Texture2D" uid="uid://c8gyc1jvunhhb" path="res://assets/sprites/tilesets/debug_tileset_basic2.png" id="2_7t3qb"]
[ext_resource type="PackedScene" uid="uid://ctdf8l75pwgyp" path="res://players/megaman.tscn" id="2_mabb1"]
[ext_resource type="PackedScene" uid="uid://c2uib5gb7iqph" path="res://levels/level_mechanics/ladder.tscn" id="4_p7my6"]
[ext_resource type="AudioStream" uid="uid://3hdu3cvqvx5s" path="res://assets/music/[Spark the Electric Jester OST] 18 - Reynol Complex (Stage 13).mp3" id="6_i4xyi"]
[ext_resource type="PackedScene" uid="uid://dsrq7ljrj02jw" path="res://enemy/sniper_joe.tscn" id="8_60iu1"]
[ext_resource type="PackedScene" uid="uid://ctdj2q3rpw4o1" path="res://enemy/original/electric_gabyoall.tscn" id="8_ycmm6"]
[ext_resource type="PackedScene" uid="uid://bsrhpqbjecu3t" path="res://enemy/boss/weapon_archive_boss.tscn" id="10_l07ml"]
[ext_resource type="PackedScene" uid="uid://dy5155ckq0051" path="res://levels/spawners/enemy_spawner.tscn" id="11_06gft"]
[ext_resource type="PackedScene" uid="uid://cc4qei06qq73e" path="res://levels/level_mechanics/conveyor_belt_area_2d.tscn" id="11_330ex"]
[ext_resource type="PackedScene" uid="uid://uwado8kayc05" path="res://miscellenaous/large_health_capsule.tscn" id="12_2bvdr"]
[ext_resource type="Texture2D" uid="uid://bnm45vf1cmict" path="res://assets/sprites/enemies/bosses/robot masters concept art-by His Grace.png" id="12_5xn54"]
[ext_resource type="Texture2D" uid="uid://vxk7p03b556m" path="res://assets/sprites/enemies/bosses/shadow man test display.png" id="13_dco8f"]
[ext_resource type="PackedScene" uid="uid://die537ieus3fp" path="res://enemy/original/laser_test.tscn" id="14_28iij"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q0e7h"]
resource_name = "debug_tileset"
texture = ExtResource("2_7t3qb")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_qvxqa"]
physics_layer_0/collision_layer = 15
physics_layer_0/collision_mask = 15
sources/0 = SubResource("TileSetAtlasSource_q0e7h")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1oxe6"]
size = Vector2(10, 6.60097)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_181ir"]
size = Vector2(19, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1e4c0"]
size = Vector2(16.5, 112.22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63urt"]
size = Vector2(68, 81.6809)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uv4om"]
size = Vector2(113, 19)

[node name="test_stage" type="Node2D"]
script = ExtResource("1_vfap4")

[node name="tilemap" type="TileMap" parent="." groups=["tilemaps"]]
tile_set = SubResource("TileSet_qvxqa")
format = 2
layer_0/name = "level"
layer_0/tile_data = PackedInt32Array(851968, 0, 0, 786432, 0, 0, 720896, 0, 0, 655360, 0, 0, 589824, 0, 0, 524288, 0, 0, 196608, 0, 0, 131072, 0, 0, 65536, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 589832, 131072, 0, 524296, 131072, 0, 458760, 131072, 0, 393224, 131072, 0, 327688, 131072, 0, 262152, 131072, 0, 262151, 0, 0, 262150, 0, 0, 262153, 0, 0, 262154, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 327698, 0, 0, 327699, 0, 0, 393235, 0, 0, 393234, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 655368, 131072, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -131059, 0, 0, -65536, 0, 0, 0, 0, 0, 917532, 0, 0, 917531, 0, 0, 917530, 0, 0, 917529, 0, 0, 917528, 0, 0, 917527, 0, 0, 917526, 0, 0, 917525, 0, 0, 917522, 0, 0, 917521, 0, 0, 917520, 0, 0, 917519, 0, 0, 917518, 0, 0, 917517, 0, 0, 917516, 0, 0, 917515, 0, 0, 917512, 0, 0, 917511, 0, 0, 917510, 0, 0, 917509, 0, 0, 917508, 0, 0, 917507, 0, 0, 917506, 0, 0, 917505, 0, 0, 917504, 0, 0, 917513, 0, 0, 917514, 0, 0, 917523, 0, 0, 917524, 0, 0, 851979, 262144, 0, 851980, 327680, 0, 851981, 327680, 0, 851982, 327680, 0, 851983, 327680, 0, 851984, 327680, 0, 851985, 327680, 0, -131043, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 0, 0, 917541, 0, 0, 917540, 0, 0, 917539, 0, 0, 917538, 0, 0, 917537, 0, 0, 917542, 0, 0, 917543, 0, 0, 917544, 0, 0, 917545, 0, 0, 917546, 0, 0, 852010, 0, 0, 786474, 0, 0, 720938, 0, 0, 655402, 0, 0, 589866, 0, 0, 524330, 0, 0, 458794, 0, 0, 393258, 0, 0, 196650, 0, 0, 131114, 0, 0, 65578, 0, 0, 42, 0, 0, -65494, 0, 0, -131030, 0, 0, 262186, 0, 0, 327722, 0, 0, 786468, 0, 0, 786469, 0, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -131039, 0, 0, -131038, 0, 0, -131037, 0, 0, -131036, 0, 0, -131035, 0, 0, -131034, 0, 0, -131033, 0, 0, -131032, 0, 0, -131031, 0, 0)
layer_1/name = "background"
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(65537, 196608, 0, 131073, 196608, 0, 196609, 196608, 0, 262145, 196608, 0, 327681, 196608, 0, 393217, 196608, 0, 458753, 196608, 0, 524289, 196608, 0, 589825, 196608, 0, 655361, 196608, 0, 720897, 196608, 0, 786433, 196608, 0, 65538, 196608, 0, 131074, 196608, 0, 196610, 196608, 0, 262146, 196608, 0, 327682, 196608, 0, 393218, 196608, 0, 458754, 196608, 0, 524290, 196608, 0, 589826, 196608, 0, 655362, 196608, 0, 720898, 196608, 0, 786434, 196608, 0, 65539, 196608, 0, 131075, 196608, 0, 196611, 196608, 0, 262147, 196608, 0, 327683, 196608, 0, 393219, 196608, 0, 458755, 196608, 0, 524291, 196608, 0, 589827, 196608, 0, 655363, 196608, 0, 720899, 196608, 0, 786435, 196608, 0, 65540, 196608, 0, 131076, 196608, 0, 196612, 196608, 0, 262148, 196608, 0, 327684, 196608, 0, 393220, 196608, 0, 458756, 196608, 0, 524292, 196608, 0, 589828, 196608, 0, 655364, 196608, 0, 720900, 196608, 0, 786436, 196608, 0, 65541, 196608, 0, 131077, 196608, 0, 196613, 196608, 0, 262149, 196608, 0, 327685, 196608, 0, 393221, 196608, 0, 458757, 196608, 0, 524293, 196608, 0, 589829, 196608, 0, 655365, 196608, 0, 720901, 196608, 0, 786437, 196608, 0, 65542, 196608, 0, 131078, 196608, 0, 196614, 196608, 0, 262150, 196608, 0, 327686, 196608, 0, 393222, 196608, 0, 458758, 196608, 0, 524294, 196608, 0, 589830, 196608, 0, 655366, 196608, 0, 720902, 196608, 0, 786438, 196608, 0, 65543, 196608, 0, 131079, 196608, 0, 196615, 196608, 0, 262151, 196608, 0, 327687, 196608, 0, 393223, 196608, 0, 458759, 196608, 0, 524295, 196608, 0, 589831, 196608, 0, 655367, 196608, 0, 720903, 196608, 0, 786439, 196608, 0, 65544, 196608, 0, 131080, 196608, 0, 196616, 196608, 0, 262152, 196608, 0, 327688, 196608, 0, 393224, 196608, 0, 458760, 196608, 0, 524296, 196608, 0, 589832, 196608, 0, 655368, 196608, 0, 720904, 196608, 0, 786440, 196608, 0, 65545, 196608, 0, 131081, 196608, 0, 196617, 196608, 0, 262153, 196608, 0, 327689, 196608, 0, 393225, 196608, 0, 458761, 196608, 0, 524297, 196608, 0, 589833, 196608, 0, 655369, 196608, 0, 720905, 196608, 0, 786441, 196608, 0, 65546, 196608, 0, 131082, 196608, 0, 196618, 196608, 0, 262154, 196608, 0, 327690, 196608, 0, 393226, 196608, 0, 458762, 196608, 0, 524298, 196608, 0, 589834, 196608, 0, 655370, 196608, 0, 720906, 196608, 0, 786442, 196608, 0, 65547, 196608, 0, 131083, 196608, 0, 196619, 196608, 0, 262155, 196608, 0, 327691, 196608, 0, 393227, 196608, 0, 458763, 196608, 0, 524299, 196608, 0, 589835, 196608, 0, 655371, 196608, 0, 720907, 196608, 0, 786443, 196608, 0, 65548, 196608, 0, 131084, 196608, 0, 196620, 196608, 0, 262156, 196608, 0, 327692, 196608, 0, 393228, 196608, 0, 458764, 196608, 0, 524300, 196608, 0, 589836, 196608, 0, 655372, 196608, 0, 720908, 196608, 0, 786444, 196608, 0, 65549, 196608, 0, 131085, 196608, 0, 196621, 196608, 0, 262157, 196608, 0, 327693, 196608, 0, 393229, 196608, 0, 458765, 196608, 0, 524301, 196608, 0, 589837, 196608, 0, 655373, 196608, 0, 720909, 196608, 0, 786445, 196608, 0, 65550, 196608, 0, 131086, 196608, 0, 196622, 196608, 0, 262158, 196608, 0, 327694, 196608, 0, 393230, 196608, 0, 458766, 196608, 0, 524302, 196608, 0, 589838, 196608, 0, 655374, 196608, 0, 720910, 196608, 0, 786446, 196608, 0, 65551, 196608, 0, 131087, 196608, 0, 196623, 196608, 0, 262159, 196608, 0, 327695, 196608, 0, 393231, 196608, 0, 458767, 196608, 0, 524303, 196608, 0, 589839, 196608, 0, 655375, 196608, 0, 720911, 196608, 0, 786447, 196608, 0, 65552, 196608, 0, 131088, 196608, 0, 196624, 196608, 0, 262160, 196608, 0, 327696, 196608, 0, 393232, 196608, 0, 458768, 196608, 0, 524304, 196608, 0, 589840, 196608, 0, 655376, 196608, 0, 720912, 196608, 0, 786448, 196608, 0, 65553, 196608, 0, 131089, 196608, 0, 196625, 196608, 0, 262161, 196608, 0, 327697, 196608, 0, 393233, 196608, 0, 458769, 196608, 0, 524305, 196608, 0, 589841, 196608, 0, 655377, 196608, 0, 720913, 196608, 0, 786449, 196608, 0, 65554, 196608, 0, 131090, 196608, 0, 196626, 196608, 0, 262162, 196608, 0, 327698, 196608, 0, 393234, 196608, 0, 458770, 196608, 0, 524306, 196608, 0, 589842, 196608, 0, 655378, 196608, 0, 720914, 196608, 0, 786450, 196608, 0, 65555, 196608, 0, 131091, 196608, 0, 196627, 196608, 0, 262163, 196608, 0, 327699, 196608, 0, 393235, 196608, 0, 458771, 196608, 0, 524307, 196608, 0, 589843, 196608, 0, 655379, 196608, 0, 720915, 196608, 0, 786451, 196608, 0, 65556, 196608, 0, 131092, 196608, 0, 196628, 196608, 0, 262164, 196608, 0, 327700, 196608, 0, 393236, 196608, 0, 458772, 196608, 0, 524308, 196608, 0, 589844, 196608, 0, 655380, 196608, 0, 720916, 196608, 0, 786452, 196608, 0, 65557, 196608, 0, 131093, 196608, 0, 196629, 196608, 0, 262165, 196608, 0, 327701, 196608, 0, 393237, 196608, 0, 458773, 196608, 0, 524309, 196608, 0, 589845, 196608, 0, 655381, 196608, 0, 720917, 196608, 0, 786453, 196608, 0, 65558, 196608, 0, 131094, 196608, 0, 196630, 196608, 0, 262166, 196608, 0, 327702, 196608, 0, 393238, 196608, 0, 458774, 196608, 0, 524310, 196608, 0, 589846, 196608, 0, 655382, 196608, 0, 720918, 196608, 0, 786454, 196608, 0, 65559, 196608, 0, 131095, 196608, 0, 196631, 196608, 0, 262167, 196608, 0, 327703, 196608, 0, 393239, 196608, 0, 458775, 196608, 0, 524311, 196608, 0, 589847, 196608, 0, 655383, 196608, 0, 720919, 196608, 0, 786455, 196608, 0, 65560, 196608, 0, 131096, 196608, 0, 196632, 196608, 0, 262168, 196608, 0, 327704, 196608, 0, 393240, 196608, 0, 458776, 196608, 0, 524312, 196608, 0, 589848, 196608, 0, 655384, 196608, 0, 720920, 196608, 0, 786456, 196608, 0, 65561, 196608, 0, 131097, 196608, 0, 196633, 196608, 0, 262169, 196608, 0, 327705, 196608, 0, 393241, 196608, 0, 458777, 196608, 0, 524313, 196608, 0, 589849, 196608, 0, 655385, 196608, 0, 720921, 196608, 0, 786457, 196608, 0, 65562, 196608, 0, 131098, 196608, 0, 196634, 196608, 0, 262170, 196608, 0, 327706, 196608, 0, 393242, 196608, 0, 458778, 196608, 0, 524314, 196608, 0, 589850, 196608, 0, 655386, 196608, 0, 720922, 196608, 0, 786458, 196608, 0, 65563, 196608, 0, 131099, 196608, 0, 196635, 196608, 0, 262171, 196608, 0, 327707, 196608, 0, 393243, 196608, 0, 458779, 196608, 0, 524315, 196608, 0, 589851, 196608, 0, 655387, 196608, 0, 720923, 196608, 0, 786459, 196608, 0, -65535, 196608, 0, 1, 196608, 0, -65534, 196608, 0, 2, 196608, 0, -65533, 196608, 0, 3, 196608, 0, -65532, 196608, 0, 4, 196608, 0, -65531, 196608, 0, 5, 196608, 0, -65530, 196608, 0, 6, 196608, 0, -65529, 196608, 0, 7, 196608, 0, -65528, 196608, 0, 8, 196608, 0, -65527, 196608, 0, 9, 196608, 0, -65526, 196608, 0, 10, 196608, 0, -65525, 196608, 0, 11, 196608, 0, -65524, 196608, 0, 12, 196608, 0, -65523, 196608, 0, 13, 196608, 0, -65522, 196608, 0, 14, 196608, 0, -65521, 196608, 0, 15, 196608, 0, -65520, 196608, 0, 16, 196608, 0, -65519, 196608, 0, 17, 196608, 0, -65518, 196608, 0, 18, 196608, 0, -65517, 196608, 0, 19, 196608, 0, -65516, 196608, 0, 20, 196608, 0, -65515, 196608, 0, 21, 196608, 0, -65514, 196608, 0, 22, 196608, 0, -65513, 196608, 0, 23, 196608, 0, -65512, 196608, 0, 24, 196608, 0, -65511, 196608, 0, 25, 196608, 0, -65510, 196608, 0, 26, 196608, 0, -65509, 196608, 0, 27, 196608, 0, 851969, 196608, 0, 851970, 196608, 0, 851971, 196608, 0, 851972, 196608, 0, 851973, 196608, 0, 851974, 196608, 0, 851975, 196608, 0, 851976, 196608, 0, 851977, 196608, 0, 851978, 196608, 0, 851979, 196608, 0, 851980, 196608, 0, 851981, 196608, 0, 851982, 196608, 0, 851983, 196608, 0, 851984, 196608, 0, 851985, 196608, 0, 851986, 196608, 0, 851987, 196608, 0, 851988, 196608, 0, 851989, 196608, 0, 851990, 196608, 0, 851991, 196608, 0, 851992, 196608, 0, 851993, 196608, 0, 851994, 196608, 0, 851995, 196608, 0, -65508, 196608, 0, 28, 196608, 0, 65564, 196608, 0, 131100, 196608, 0, 196636, 196608, 0, 262172, 196608, 0, 327708, 196608, 0, 393244, 196608, 0, 458780, 196608, 0, 524316, 196608, 0, 589852, 196608, 0, 655388, 196608, 0, 720924, 196608, 0, 786460, 196608, 0, 851996, 196608, 0, -65507, 196608, 0, 29, 196608, 0, 65565, 196608, 0, 131101, 196608, 0, 196637, 196608, 0, 262173, 196608, 0, 327709, 196608, 0, 393245, 196608, 0, 458781, 196608, 0, 524317, 196608, 0, 589853, 196608, 0, 655389, 196608, 0, 720925, 196608, 0, 786461, 196608, 0, 851997, 196608, 0, -65506, 196608, 0, 30, 196608, 0, 65566, 196608, 0, 131102, 196608, 0, 196638, 196608, 0, 262174, 196608, 0, 327710, 196608, 0, 393246, 196608, 0, 458782, 196608, 0, 524318, 196608, 0, 589854, 196608, 0, 655390, 196608, 0, 720926, 196608, 0, 786462, 196608, 0, 851998, 196608, 0, -65505, 196608, 0, 31, 196608, 0, 65567, 196608, 0, 131103, 196608, 0, 196639, 196608, 0, 262175, 196608, 0, 327711, 196608, 0, 393247, 196608, 0, 458783, 196608, 0, 524319, 196608, 0, 589855, 196608, 0, 655391, 196608, 0, 720927, 196608, 0, 786463, 196608, 0, 851999, 196608, 0, -65504, 196608, 0, 32, 196608, 0, 65568, 196608, 0, 131104, 196608, 0, 196640, 196608, 0, 262176, 196608, 0, 327712, 196608, 0, 393248, 196608, 0, 458784, 196608, 0, 524320, 196608, 0, 589856, 196608, 0, 655392, 196608, 0, 720928, 196608, 0, 786464, 196608, 0, 852000, 196608, 0, -65503, 196608, 0, 33, 196608, 0, 65569, 196608, 0, 131105, 196608, 0, 196641, 196608, 0, 262177, 196608, 0, 327713, 196608, 0, 393249, 196608, 0, 458785, 196608, 0, 524321, 196608, 0, 589857, 196608, 0, 655393, 196608, 0, 720929, 196608, 0, 786465, 196608, 0, 852001, 196608, 0, -65502, 196608, 0, 34, 196608, 0, 65570, 196608, 0, 131106, 196608, 0, 196642, 196608, 0, 262178, 196608, 0, 327714, 196608, 0, 393250, 196608, 0, 458786, 196608, 0, 524322, 196608, 0, 589858, 196608, 0, 655394, 196608, 0, 720930, 196608, 0, 786466, 196608, 0, 852002, 196608, 0, -65501, 196608, 0, 35, 196608, 0, 65571, 196608, 0, 131107, 196608, 0, 196643, 196608, 0, 262179, 196608, 0, 327715, 196608, 0, 393251, 196608, 0, 458787, 196608, 0, 524323, 196608, 0, 589859, 196608, 0, 655395, 196608, 0, 720931, 196608, 0, 786467, 196608, 0, 852003, 196608, 0, -65500, 196608, 0, 36, 196608, 0, 65572, 196608, 0, 131108, 196608, 0, 196644, 196608, 0, 262180, 196608, 0, 327716, 196608, 0, 393252, 196608, 0, 458788, 196608, 0, 524324, 196608, 0, 589860, 196608, 0, 655396, 196608, 0, 720932, 196608, 0, 786468, 196608, 0, 852004, 196608, 0, -65499, 196608, 0, 37, 196608, 0, 65573, 196608, 0, 131109, 196608, 0, 196645, 196608, 0, 262181, 196608, 0, 327717, 196608, 0, 393253, 196608, 0, 458789, 196608, 0, 524325, 196608, 0, 589861, 196608, 0, 655397, 196608, 0, 720933, 196608, 0, 786469, 196608, 0, 852005, 196608, 0, -65498, 196608, 0, 38, 196608, 0, 65574, 196608, 0, 131110, 196608, 0, 196646, 196608, 0, 262182, 196608, 0, 327718, 196608, 0, 393254, 196608, 0, 458790, 196608, 0, 524326, 196608, 0, 589862, 196608, 0, 655398, 196608, 0, 720934, 196608, 0, 786470, 196608, 0, 852006, 196608, 0, -65497, 196608, 0, 39, 196608, 0, 65575, 196608, 0, 131111, 196608, 0, 196647, 196608, 0, 262183, 196608, 0, 327719, 196608, 0, 393255, 196608, 0, 458791, 196608, 0, 524327, 196608, 0, 589863, 196608, 0, 655399, 196608, 0, 720935, 196608, 0, 786471, 196608, 0, 852007, 196608, 0, -65496, 196608, 0, 40, 196608, 0, 65576, 196608, 0, 131112, 196608, 0, 196648, 196608, 0, 262184, 196608, 0, 327720, 196608, 0, 393256, 196608, 0, 458792, 196608, 0, 524328, 196608, 0, 589864, 196608, 0, 655400, 196608, 0, 720936, 196608, 0, 786472, 196608, 0, 852008, 196608, 0, -65495, 196608, 0, 41, 196608, 0, 65577, 196608, 0, 131113, 196608, 0, 196649, 196608, 0, 262185, 196608, 0, 327721, 196608, 0, 393257, 196608, 0, 458793, 196608, 0, 524329, 196608, 0, 589865, 196608, 0, 655401, 196608, 0, 720937, 196608, 0, 786473, 196608, 0, 852009, 196608, 0)

[node name="megaman" parent="." instance=ExtResource("2_mabb1")]
position = Vector2(78, 211)

[node name="reserve_marker1" type="Marker2D" parent="."]
position = Vector2(-16, 167)

[node name="ladder" parent="." instance=ExtResource("4_p7my6")]
position = Vector2(4.42877, -2.44055)

[node name="ladder@ontop@CollisionShape2D2" type="CollisionShape2D" parent="ladder/ontop_platforms" index="0"]
position = Vector2(130.571, 66.741)
shape = SubResource("RectangleShape2D_1oxe6")

[node name="ladder@StaticBody2D@CollisionShape2D" type="CollisionShape2D" parent="ladder/top_platforms" index="0"]
position = Vector2(130.571, 70.4406)
shape = SubResource("RectangleShape2D_181ir")

[node name="Marker2D" parent="ladder" index="3"]
visible = false

[node name="Marker2D2" parent="ladder" index="4"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladder"]
position = Vector2(131.321, 122.551)
shape = SubResource("RectangleShape2D_1e4c0")

[node name="bgm" type="AudioStreamPlayer2D" parent="." groups=["bgm"]]
process_mode = 3
stream = ExtResource("6_i4xyi")
volume_db = -15.0
autoplay = true
max_distance = 1e+14

[node name="sniper_joe" parent="." instance=ExtResource("8_60iu1")]
position = Vector2(402, 317)

[node name="enter_player" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enter_player"]
position = Vector2(76, 179)
shape = SubResource("RectangleShape2D_63urt")

[node name="all_camera" type="Node2D" parent="."]

[node name="stage_camera" type="Camera2D" parent="all_camera"]
position = Vector2(532, 456)
limit_left = 0
limit_top = -31
limit_right = 688
limit_bottom = 240
editor_draw_limits = true

[node name="all_enemies" type="Node2D" parent="."]

[node name="enemy_spawner" parent="all_enemies" instance=ExtResource("11_06gft")]
position = Vector2(230.697, 139.376)
enemy_to_spawn = "ceiling_shooter_"
visibility = true

[node name="electric_gabyoall" parent="all_enemies" instance=ExtResource("8_ycmm6")]
position = Vector2(296, 32)

[node name="enemy_spawner2" parent="all_enemies" instance=ExtResource("11_06gft")]
position = Vector2(390, 215)
enemy_to_spawn = "sniper_joe"

[node name="all_collectables" type="Node2D" parent="."]

[node name="large_health_capsule" parent="all_collectables" instance=ExtResource("12_2bvdr")]
position = Vector2(137, 207)

[node name="test_bosses" type="Node2D" parent="."]

[node name="weapon_archive_boss" parent="test_bosses" instance=ExtResource("10_l07ml")]
position = Vector2(747.437, 603.856)

[node name="all_conveyor" type="Node2D" parent="."]

[node name="conveyor_belt_area2d" parent="all_conveyor" instance=ExtResource("11_330ex")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="all_conveyor/conveyor_belt_area2d"]
position = Vector2(232.5, 213.5)
shape = SubResource("RectangleShape2D_uv4om")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(558, 183)
texture = ExtResource("12_5xn54")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(511, 209)
texture = ExtResource("13_dco8f")

[node name="Node2D" type="Node2D" parent="."]

[node name="laser_test" parent="Node2D" instance=ExtResource("14_28iij")]
position = Vector2(152, -17)

[node name="RayCast2D" parent="Node2D/laser_test" index="1"]
target_position = Vector2(107, 142)

[connection signal="body_entered" from="enter_player" to="." method="_on_enter_player_body_entered"]

[editable path="ladder"]
[editable path="Node2D/laser_test"]
